--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
   <title>Angular Friends</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+  <script defer type="text/javascript" src="app.js"></script>
+  <script defer type="text/javascript" src="FriendCtrl.js"></script>
 </head>
 <body>
   <h1>The <strong>facebook</strong> Friend Machine</h1>
 
-  <div class="friends">
+  <div class="friends" ng-controller="FriendCtrl">
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
-        <input class="form-control" placeholder="Search Anything About Your Friends">
+        <input class="form-control" placeholder="Search Name" ng-model="searchName">
+        <input class="form-control" placeholder="Search State" ng-model="searchState">
 
-        <select class="input-medium">
-          <option>Name</option>
-          <option>#Friends</option>
-          <option>City</option>
-          <option>State</option>
-          <option>Country</option>
+        <select class="input-medium" ng-model="sortProp" ng-options="x for (x, y) in sortViews">
         </select>
 
-        <select class="input-medium">
-          <option value="-">Descending</option>
-          <option value="+">Ascending</option>
+        <select class="input-medium" ng-model="sortDirection" ng-options="x for (x,y) in sortReverse">
         </select>
       </div>
     </form>
 
     <ul>
-      <li class='friend'>
-        <img class="profile-pic" src='http://placebear.com/50/50.jpg'>
-        <h3>Cali Fornia</h3>
+      <li class='friend' ng-repeat="friend in friends | filter:{ name: searchName, location: {state: searchState} } | orderBy : sortDirection + sortProp">
+        <img class="profile-pic" ng-src='{{ friend.pic_square }}'>
+        <h3>{{ friend.name }}</h3>
         <div class="location">
-          Location: New Port Beach, California, United States
+          Location: {{ friend.location.city }}, {{ friend.location.state }}, {{ friend.location.country }}
         </div>
         <div class="status">
-          Status: I hate the snow. I wish I was on the beach right now!!!
+          Status: {{ friend.status.message }}
         </div>
         <div class="num-friends">
-          Friends: 1,367
+          Friends: {{ friend.friend_count }}
         </div>
       </li>
     </ul>
